# openvino_test

./: CMakeLists.txt  vcpkg.json
.github/workflows/: ccpp.yml
